--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,6 +39,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="/allListings">All Listings</a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/chart">Chart</a>
+          </li>
         </ul>
       </div>
     </nav>
