--- a/views/chart.handlebars
+++ b/views/chart.handlebars
@@ -1,9 +1,9 @@
-<div class="container">
-  <h1>MongoDB Chart</h1>
-  <div class="chart-container">
+<div class="container py-3">
+  <h1 class="text-center mb-4">MongoDB Chart</h1>
+  <div class="chart-container mb-5">
     <iframe
-      style="background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);width: 100vw;height: 100vh;"
-      src="https://charts.mongodb.com/charts-project-0-pckactu/embed/dashboards?id=67564b79-adfe-4178-8927-8c092f4f4503&theme=light&autoRefresh=false&maxDataAge=-1&showTitleAndDesc=false&scalingWidth=fixed&scalingHeight=fixed"
+      style="background: #21313C; border: none; width: 100%; height: 80vh; border-radius: 5px; box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);"
+      src="https://charts.mongodb.com/charts-project-0-pckactu/embed/dashboards?id=67564b79-adfe-4178-8927-8c092f4f4503&theme=dark&autoRefresh=true&maxDataAge=3600&showTitleAndDesc=false&scalingWidth=scale&scalingHeight=scale"
     ></iframe>
   </div>
 </div>
