--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,6 +42,12 @@
           <li class="nav-item active">
             <a class="nav-link" href="/chart">Chart</a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/showSearch">Search</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/listing/add">Add</a>
+          </li>
         </ul>
       </div>
     </nav>
